# podcast-linkedin-intelligence-skills

./: .env.example  .gitignore  README.md  pyproject.toml
references/: guest-extraction-patterns.md  linkedin-scoring.md  output-schemas.md  podcast-query-patterns.md  research-report-workflows.md  setup.md
scripts/: api_clients.py  apify_serp.py  build_interviewee_linkedin_list.py  common.py  discover_podcast_interviews_serp.py  discover_podcasts.py  enrich_linkedin_via_apify_serp.py  extract_youtube_urls_from_report.py  extraction.py  genspark_assisted.py  ingest_research_report.py  linkedin_matcher.py  match_linkedin_profiles.py  ocr_thumbnails.py  resolve_youtube_channels.py  run_podcast_intelligence_waterfall.py  score_podcast_opportunities.py  scrape_audio_podcast_guests.py  scrape_youtube_podcast_guests.py  transcribe_audio_episodes.py
skills/discovering-niche-podcasts/: SKILL.md
skills/finding-podcast-youtube-urls/: SKILL.md
skills/matching-podcast-owners-linkedin/: SKILL.md
skills/scraping-audio-podcast-guests/: SKILL.md
skills/scraping-youtube-podcast-guests/: SKILL.md
tests/: test_apify_serp_waterfall.py  test_extraction.py  test_interviewee_pipeline.py  test_linkedin_matcher.py  test_offline_pipeline.py  test_opportunity_scoring.py  test_report_ingestion.py  test_youtube_url_report_extraction.py
tests/fixtures/: genspark_confirmed_family_law_episode_urls.md  genspark_family_law_youtube_report.md  genspark_report.md  perplexity_report.md
